# chrome-extension-reviews-scraper

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
scripts/: scrape_chrome_webstore_reviews.py
src/cwsreviews/: __init__.py  __main__.py  cli.py  http.py  models.py  parsing.py  scraper.py
tests/: test_parsing.py  test_scraper_inputs.py
