[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-extension-reviews-scraper"
version = "0.1.0"
description = "Python CLI to scrape and export Chrome Web Store extension reviews to JSONL and CSV."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Chrome Extension Reviews Scraper contributors"}]
dependencies = ["click>=8.1.7", "requests>=2.31.0"]
keywords = [
    "chrome extension reviews scraper",
    "chrome web store reviews",
    "chrome extension reviews",
    "web scraping",
    "csv",
    "jsonl",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/catorch/chrome-extension-reviews-scraper"
Repository = "https://github.com/catorch/chrome-extension-reviews-scraper"
Issues = "https://github.com/catorch/chrome-extension-reviews-scraper/issues"

[project.scripts]
chrome-extension-reviews-scraper = "cwsreviews.cli:cli"
cwsreviews = "cwsreviews.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
